templates/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "django-deployment"
  namespace: "stage"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-svc
  template:
    metadata:
      labels:
        app: django-svc
    spec:
      containers:
        - name: "django-deployment"
          image: "asia-south1-docker.pkg.dev/bo-stage/bo-main/17-12-2024_11-48-31@sha256:e462b7366629ecdfbb739203980796d3dd5f61e6bd8cc522a01719790c47e84e"
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
