templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-deployment
  namespace: stage
  labels:
    app: django-deployment
  annotations:
    cloud.google.com/backend-config: '{"default": "django-backend-config"}'
spec:
  type: ClusterIP      
  selector:
    app: django-deployment
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
